<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <TextView
        android:id="@+id/messageMeno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meno"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messageFakulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fakulta"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageMeno" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16sp"
        android:text="@string/text_spr_vytext_spr_vytext_spr_vytext_spr_vytext_spr_vytext_spr_vytext_spr_vy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageTime" />

    <TextView
        android:id="@+id/messageTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16sp"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageFakulta" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ididididididididid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/messageProfil"
        app:layout_constraintTop_toBottomOf="@+id/messageText"
        android:id="@+id/messageId"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ididdiddiddiddiddiddiddiddid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/messageProfil"
        app:layout_constraintTop_toBottomOf="@+id/messageText"
        android:id="@+id/messageDocumentId"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/messageProfil"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="16dp"
        android:text="@string/profil"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/messageZoznam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/messageZoznam"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/zoznam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/messageProfil"
        app:layout_constraintTop_toBottomOf="@+id/messageText" />
</androidx.constraintlayout.widget.ConstraintLayout>