<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:id="@+id/largeLabel"
        >
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_person_black_24dp"
            android:id="@+id/user_profile_image"
            />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:layout_below="@id/largeLabel"
        android:id="@+id/likeLabel"
        >

        <ImageButton
            android:id="@+id/user_profile_like_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@color/white"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_thumb_up_black_24dp"
            />

        <TextView
            android:id="@+id/user_profile_like_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likes"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:layout_marginTop="9dp"
            />


        <ImageButton
            android:id="@+id/user_profile_comment_button"
            android:text="Leave Comment"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_comment_black_24dp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@color/white"
            android:contentDescription="TODO" />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_profile_mail_button"
        android:text="@string/send_email"
        android:layout_below="@id/likeLabel"
        />

    <LinearLayout
        android:id="@+id/smallLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="140dp"
        android:orientation="vertical"
        android:layout_margin="5dp"
        >

        <TextView
            android:id="@+id/user_profile_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/userfullname"
            android:textAlignment="textStart"
            android:textSize="25sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_profile_faculty"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/userfaculty"
            android:textColor="#000000"
            android:textAlignment="textStart"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/user_profile_mail_button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/user_comment_list"
        >


    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>